# kael-trading-bot

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  PROJECT_TECHNICAL_SUMMARY.md  README.md  TECH_SUMMARY.md  docker-compose.yml  main.py  mock.html  pyproject.toml  requirements.txt
.github/workflows/: a11y-wcag-check.yml  ci.yml
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/scripts/: wcag-contrast-check.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: ErrorMessage.jsx  Navbar.jsx  Spinner.jsx  ThemeProvider.jsx  ThemeToggle.jsx  TradingViewChart.jsx
frontend/src/hooks/: useTheme.js
frontend/src/pages/: AccuracyPage.jsx  ChartPage.jsx  ForecastPage.jsx  (+5 more)
src/kael_trading_bot/: __init__.py  config.py  ingestion.py  trade_setup.py
tests/: test_accuracy_calculator.py  test_accuracy_models.py  test_accuracy_persistence.py  test_ingestion.py  test_prediction_accuracy_models.py  test_prediction_accuracy_service.py  test_scanner_persistence.py  test_scanner_scheduler.py  test_telegram.py  test_training_evaluation.py  test_training_logging.py  test_training_models.py  test_training_persistence.py  test_training_pipeline.py  test_training_splitting.py  test_web.py  test_web_predictions.py  test_web_routes.py
tests/api/: __init__.py  test_accuracy_endpoints.py  test_app.py
tests/features/: test_indicators.py  test_pipeline.py  test_targets.py  test_temporal.py
tests/trade_setup/: __init__.py  test_backtest.py
(+47 files in other folders)
